--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ position:absolute;
             <a class="nav-link js-scroll-trigger" href="#about">A Construtora</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link js-scroll-trigger dropdown-toggle" data-toggle="dropdown" href="#portfolio">Portfolio</a>
+            <a class="nav-link js-scroll-trigger dropdown-toggle" data-toggle="dropdown" href="#dropdown">Portfolio</a>
             <div class="dropdown-menu">
               <a class="dropdown-item" href="#">Obras concluídas</a>
               <a class="dropdown-item" href="#">Em andamento</a>
