--- a/index-antigo-footer.html
+++ b/index-antigo-footer.html
@@ -16,7 +16,7 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
-  
+
   <!-- Plugin CSS -->
   <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
 
@@ -27,27 +27,11 @@
   <link rel="stylesheet" href="css/owlcarousel/owl.carousel.css">
   <link rel="stylesheet" href="css/owlcarousel/owl.carousel.min.css">
   <link rel="stylesheet" href="css/owlcarousel/owl.theme.default.min.css">
- 
+
   <!-- Contato -->
- <link href="css/compiled-4.8.11.min.css" rel="stylesheet">
-
-  <!-- footer -->
-  <link rel="stylesheet" href="css/footer.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
-
- 
+  <link href="css/compiled-4.8.11.min.css" rel="stylesheet">
   
   <style>
-
-footer{
-	/* position: fixed; */
-	bottom: 0;
-}
-
-@media (max-height:800px){
-	footer { position: static; }
-}
 
 .map-container-6{
 overflow:hidden;
@@ -63,9 +47,19 @@ width:100%;
 position:absolute;
 }
 
-#icone:hover{
-  transition: .1s; transform: scale(1.5);
+.facebook-rodape {
+    margin: -100px 0px 0px 0px;
+    float: right;
 }
+  .pad {
+      padding-bottom: 5px;
+      list-style-type: none;
+  }
+
+  #facebook {
+    width: 50px;
+    transition: width .2s;
+  }
 
   /* .box-imovel {
       font-size: 1.3rem;
@@ -100,7 +94,7 @@ position:absolute;
     } */
 
 
-   /*  .lt-grid-container {
+    .lt-grid-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr;
@@ -115,7 +109,7 @@ position:absolute;
     -ms-grid-rows: 1fr;
   }
 
-} */
+}
 
 header.masthead {
   padding-top: 10rem;
@@ -147,7 +141,7 @@ header.masthead {
 
 </head>
 
-<body id="page-top" style="overflow-x: hidden;">
+<body id="page-top">
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
@@ -347,7 +341,7 @@ header.masthead {
         <div class="col-lg-7">
     
           <!--Google map-->
-          <div id="map-container-google-11" class="z-depth-1-half map-container-6" style="height: 400px;">
+          <div id="map-container-google-11" class="z-depth-1-half map-container-6" style="height: 400px">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3959.0560789787573!2d-34.847188685226115!3d-7.119499994858842!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zN8KwMDcnMTAuMiJTIDM0wrA1MCc0Mi4wIlc!5e0!3m2!1spt-PT!2sbr!4v1573394971621!5m2!1spt-PT!2sbr"
               frameborder="0" style="border:0" allowfullscreen></iframe>
           </div>
@@ -381,56 +375,20 @@ header.masthead {
     </section>
 
   <!-- Footer -->
-  <footer class="footer-distributed">
+  <footer class="btn-light-blue py-5">
+      <div class="">
+          <ul>
+            <li class="pad"><span><img class="icon" src="img/mail.svg"></span></li>
 
-    <div class="footer-left">
+            <li class="pad"><span id="fone"><img class="icon-phone" src=""><a href="tel:8134275172">(81) 3423-5172</a> / <a href="tel:8132121160">(81) 3212-1160</a></span></li>
 
-      <h3>Oceania<span> Construtora</span></h3>
-
-      <p class="footer-links">
-        <a href="#page-top">Home</a>
-        ·
-        <a href="#about">About</a>
-        ·
-        <a href="#contact">Contact</a>
-      </p>
-
-      <p class="footer-company-name">Construtora Oceania © 2019</p>
-    </div>
-
-    <div class="footer-center">
-
-      <div>
-        <i class="fa fa-map-marker"></i>
-        <p><span>21 Revolution Street</span> Paris, France</p>
+            <li class="pad"><a  target="_blank" href=''><img class="icon" src="">Rua José de Holanda, nº 472, Sala 4, Torre - Recife - PE.</a></li>
+        </ul>
       </div>
 
-      <div>
-        <i class="fa fa-phone"></i>
-        <p>+1 555 123456</p>
-      </div>
-
-      <div>
-        <i class="fa fa-envelope"></i>
-        <p><a href="mailto:support@company.com">support@company.com</a></p>
-      </div>
-
-    </div>
-
-    <div class="footer-right">
-
-      <p class="footer-company-about">
-        <span>Siga-nos:</span>
-      </p>
-
-      <div class="footer-icons">
-        <a id="icone" href="#"><i class="fa fa-facebook"></i></a>
-        <a id="icone" href="#"><i class="fa fa-twitter"></i></a>
-        <a id="icone" href="#"><i class="fa fa-instagram"></i></a>
-      </div>
-
-    </div>
-
+    <!-- <div class="container">
+      <div class="small text-center text-muted">Copyright &copy; 2019 - Start Bootstrap</div>
+    </div> -->
   </footer>
 
   <!-- Bootstrap core JavaScript -->
