--- a/index.html
+++ b/index.html
@@ -402,12 +402,12 @@ header.masthead {
 
       <div>
         <i class="fa fa-map-marker"></i>
-        <p><span>21 Revolution Street</span> Paris, France</p>
+        <p><span>endereço</span> Cabedelo, PB</p>
       </div>
 
       <div>
         <i class="fa fa-phone"></i>
-        <p>+1 555 123456</p>
+        <p>telefone</p>
       </div>
 
       <div>
