--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
   <title>Construtora Oceania Eireli</title>
 
+  <!-- Pagina Inicial -->
+  <link rel="stylesheet" href="css/estilo.css">
+
   <!-- Font Awesome Icons -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
 
@@ -35,116 +38,7 @@
   <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
-
- 
   
-  <style>
-
-footer{
-	/* position: fixed; */
-	bottom: 0;
-}
-
-@media (max-height:800px){
-	footer { position: static; }
-}
-
-.map-container-6{
-overflow:hidden;
-padding-bottom:56.25%;
-position:relative;
-height:0;
-}
-.map-container-6 iframe{
-left:0;
-top:0;
-height:100%;
-width:100%;
-position:absolute;
-}
-
-#icone:hover{
-  transition: .1s; transform: scale(1.5);
-}
-
-  /* .box-imovel {
-      font-size: 1.3rem;
-      padding: 0 .9rem;
-      margin: 1em 1rem;
-      display: inline-block;
-      background-color: #ccc;
-      clear: both;
-      color: #272F6F;
-      border-radius: 2px;
-  } */
-
-    /* .grid-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: ;
-    grid-template-areas: ". .";
-    }
-
-
-    @media all and (-ms-high-contrast:none) {
-    .grid-container {
-    display: -ms-grid;
-    -ms-grid-columns: 1fr 1fr;
-    -ms-grid-rows: ;
-    }
-    } */
-
-    /* #mapa {
-    height:250px;
-    width:100%;
-    } */
-
-
-   /*  .lt-grid-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr;
-  grid-template-areas: ". . .";
-}
-
-
-@media all and (-ms-high-contrast:none) {
-  .lt-grid-container {
-    display: -ms-grid;
-    -ms-grid-columns: 1fr 1fr 1fr;
-    -ms-grid-rows: 1fr;
-  }
-
-} */
-
-header.masthead {
-  padding-top: 10rem;
-  padding-bottom: calc(10rem - 72px);
-  background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url("img/imperial-palace-residence.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-}
-
-.icon {
-    width: 18px;
-    margin-right: 5px;
-    padding-right: 5px;
-    position: relative;
-    top: 3px;
-}
-
-#rodape {
-    background-color: #272f6f;
-    text-align: center;
-    padding: 2rem 5rem 0rem 5rem;
-    margin-bottom: -125px;
-}
-
-
-  </style>
-
 </head>
 
 <body id="page-top" style="overflow-x: hidden;">
@@ -152,7 +46,7 @@ header.masthead {
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">LOGOMARCA</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top"><p style="font: normal 36px 'Cookie', cursive;">Ocea<span style="color:#5383d3;">nia</span></p></a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -222,7 +116,7 @@ header.masthead {
                 <div class="">
                   <a href="">
                     <img src="img/imperial-palace-residence.jpg" alt="">
-                    <h2>Imperial Palace Residence</h2>
+                    <h2 style="font-size: 1rem;">Imperial Palace Residence</h2>
                     <p>Av. Minas Gerais, 138 - Estados</p>
                     </a>
                 </div>
@@ -231,7 +125,7 @@ header.masthead {
                 <div class="">
                   <a href="">
                     <img src="img/imperial-palace-residence.jpg" alt="">
-                    <h2>Imperial Palace Residence</h2>
+                    <h2 style="font-size: 1rem;">Imperial Palace Residence</h2>
                     <p>Av. Minas Gerais, 138 - Estados</p>
                     </a>
                 </div>
@@ -240,7 +134,7 @@ header.masthead {
                 <div class="">
                   <a href="">
                     <img src="img/imperial-palace-residence.jpg" alt="">
-                    <h2>Imperial Palace Residence</h2>
+                    <h2 style="font-size: 1rem;">Imperial Palace Residence</h2>
                     <p>Av. Minas Gerais, 138 - Estados</p>
                     </a>
                 </div>
@@ -249,7 +143,7 @@ header.masthead {
                 <div class="">
                   <a href="">
                     <img src="img/imperial-palace-residence.jpg" alt="">
-                    <h2>Imperial Palace Residence</h2>
+                    <h2 style="font-size: 1rem;">Imperial Palace Residence</h2>
                     <p>Av. Minas Gerais, 138 - Estados</p>
                     </a>
                 </div>
@@ -258,7 +152,7 @@ header.masthead {
                 <div class="">
                   <a href="">
                     <img src="img/imperial-palace-residence.jpg" alt="">
-                    <h2>Imperial Palace Residence</h2>
+                    <h2 style="font-size: 1rem;">Imperial Palace Residence</h2>
                     <p>Av. Minas Gerais, 138 - Estados</p>
                     </a>
                 </div>
@@ -267,7 +161,7 @@ header.masthead {
                 <div class="">
                   <a href="">
                     <img src="img/imperial-palace-residence.jpg" alt="">
-                    <h2>Imperial Palace Residence</h2>
+                    <h2 style="font-size: 1rem;">Imperial Palace Residence</h2>
                     <p>Av. Minas Gerais, 138 - Estados</p>
                     </a>
                 </div>
